--- a/bower.json
+++ b/bower.json
@@ -21,10 +21,10 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": "1.2.14"
+    "angular": "1.3.*"
   },
   "devDependencies": {
-    "angular": "1.2.14",
+    "angular": "1.3.*",
     "angular-mocks": "1.2.14",
     "angular-scenario": "1.2.14",
     "angular-bootstrap": "~0.3.0"
