--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "angular": "1.3.*"
   },
   "devDependencies": {
-    "angular": "1.3.*",
+    "angular": "1.3.20",
     "angular-mocks": "1.2.14",
     "angular-scenario": "1.2.14",
     "angular-bootstrap": "~0.3.0"
